Closed Bug 311674 Opened 20 years ago Closed 20 years ago

[FIX]nsObjectLoadingContent::Fallback never notifies

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Our notifier is destroyed as soon as it's created.
Attached patch PatchSplinter Review
Peter, this just makes sure that our object that's supposed to notify sticks around through the end of the method and so picks up our state changes.
Attachment #198939 - Flags: superreview?(peterv)
Attachment #198939 - Flags: review?(cbiesinger)
Blocks: 310515
OS: Linux → All
Priority: -- → P1
Hardware: PC → All
Summary: nsObjectLoadingContent::Fallback never notifies → [FIX]nsObjectLoadingContent::Fallback never notifies
Target Milestone: --- → mozilla1.9alpha
Attachment #198939 - Flags: review?(cbiesinger) → review+
Attachment #198939 - Flags: superreview?(peterv) → superreview+
Fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
This fix was what fixed bug 310515, so verifying this one as well (since that is already verified by me).
Status: RESOLVED → VERIFIED
Blocks: 309528
Depends on: 343604
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: