Make sure that <applet> with no code falls back and that fallback notifies as needed.  Bug 311674, r=biesi, sr=peterv